blog and gallery section

--- a/index.html
+++ b/index.html
@@ -2,68 +2,120 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Care about cat">
+    <meta name="keywords" content="cats, cats, cats">
+    <meta name="author" content="Michal Kmiť">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cat Stories</title>
     <link rel="stylesheet" href="assets/styles/styles.css">
 </head>
 <body>
-  <header>
+<header>
     <nav class="main-menu">
-      <div class="logo">
-        <img src="assets/images/cat_logo.png" alt="Cat Logo">
-      </div>
-      <ul class="nav-links">
-        <li class="nav-link">
-          <a href="">Home</a>
-        </li>
-        <li class="nav-link">
-          <a href="">Home</a>
-        </li>
-        <li class="nav-link">
-          <a href="">Home</a>
-        </li>
-      </ul>
+        <div class="logo">
+            <img src="assets/images/cat_logo.png" alt="Cat Logo">
+        </div>
+        <ul class="nav-links">
+            <li class="nav-link">
+                <a href="">Home</a>
+            </li>
+            <li class="nav-link">
+                <a href="">Home</a>
+            </li>
+            <li class="nav-link">
+                <a href="">Home</a>
+            </li>
+        </ul>
     </nav>
     <div class="welcome-section">
-      <div class="welcome-text">
-        <p>Tips for life with cats</p>
-        <h1>Cat Stories,<br> News, Tips &<br> Tricks</h1>
-      </div>
-    </div>
-  </header>
-  <main>
-    <section>
-      <div class="about-section">
-        <h2>Welcome to Club Cat Blog</h2>
-        <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat.</p>
-      </div>
-      <div class="cat-container">
-        <div class="cat-service">
-          <article class="cat-service-item">
-            <img src="assets/images/cat_cafe.jpg" alt="Cat Cafe">
-            <h3>Cat Cafe</h3>
-            <p>Etiam erat velit scelerisque in dictum non consectetur. Nisl purus in mollis nunc sed id semper. Cras fermentum odio eu feugiat pretium nibh ipsum. Tristique senectus.</p>
-            <a class="more-link" href="">more</a>
-          </article>
-          <article class="cat-service-item">
-            <img src="assets/images/cat_care.jpg" alt="Cat Care">
-            <h3>Cat Care</h3>
-            <p>Etiam erat velit scelerisque in dictum non consectetur. Nisl purus in mollis nunc sed id semper. Cras fermentum odio eu feugiat pretium nibh ipsum. Tristique senectus.</p>
-            <a class="more-link" href="">more</a>
-          </article>
-          <article class="cat-service-item">
-            <img src="assets/images/pet_guide.jpg" alt="Pet Guide">
-            <h3>Pet Guide</h3>
-            <p>Etiam erat velit scelerisque in dictum non consectetur. Nisl purus in mollis nunc sed id semper. Cras fermentum odio eu feugiat pretium nibh ipsum. Tristique senectus.</p>
-            <a class="more-link" href="">more</a>
-          </article>
+        <div class="welcome-text">
+            <p>Tips for life with cats</p>
+            <h1>Cat Stories,<br> News, Tips &<br> Tricks</h1>
         </div>
-      </div>
-      <div class="bright-section">
-      </div>
+    </div>
+</header>
+<main>
+    <section>
+        <div class="about-section">
+            <h2>Welcome to Club Cat Blog</h2>
+            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                Excepteur sint occaecat.</p>
+        </div>
+        <div class="cat-container">
+            <div class="cat-service">
+                <article class="cat-service-item">
+                    <img src="assets/images/cat_cafe.jpg" alt="Cat Cafe">
+                    <h3>Cat Cafe</h3>
+                    <p>Etiam erat velit scelerisque in dictum non consectetur. Nisl purus in mollis nunc sed id semper.
+                        Cras fermentum odio eu feugiat pretium nibh ipsum. Tristique senectus.</p>
+                    <a class="more-link" href="">more</a>
+                </article>
+                <article class="cat-service-item">
+                    <img src="assets/images/cat_care.jpg" alt="Cat Care">
+                    <h3>Cat Care</h3>
+                    <p>Etiam erat velit scelerisque in dictum non consectetur. Nisl purus in mollis nunc sed id semper.
+                        Cras fermentum odio eu feugiat pretium nibh ipsum. Tristique senectus.</p>
+                    <a class="more-link" href="">more</a>
+                </article>
+                <article class="cat-service-item">
+                    <img src="assets/images/pet_guide.jpg" alt="Pet Guide">
+                    <h3>Pet Guide</h3>
+                    <p>Etiam erat velit scelerisque in dictum non consectetur. Nisl purus in mollis nunc sed id semper.
+                        Cras fermentum odio eu feugiat pretium nibh ipsum. Tristique senectus.</p>
+                    <a class="more-link" href="">more</a>
+                </article>
+            </div>
+        </div>
+        <div class="bright-section">
+            <div class="casual-cat-image">
+                <img src="assets/images/casual_cat.jpg" alt="Casual cat">
+            </div>
+            <div class="cat-blog-container">
+                <div class="cat-blog">
+                    <h4>Cat blog</h4>
+                    <h2>Thinking of getting a <br>cat?</h2>
+                </div>
+                <div class="cat-care">
+                    <h2>Cat Care for Beginners</h2>
+                    <ol>
+                        <li>Provide plenty of human companionship.</li>
+                        <li>Provide regular, suitable meals with a constant supply of fresh water.</li>
+                        <li>Provide a clean and comfortable bed.</li>
+                        <li>Provide the cat with outdoor access or be prepared to empty and clean a litter tray on a
+                            daily basis.
+                        </li>
+                    </ol>
+                    <button class="btn">read more</button>
+                </div>
+            </div>
+        </div>
     </section>
-  </main>
-  <footer>
+    <section>
+        <div class="white-section">
 
-  </footer>
+        </div>
+        <div class="gallery-section">
+            <div class="gallery-items">
+                <div class="gallery-item">
+                    <img src="assets/images/gallery-image01.jpg" alt="Gallery image 1">
+                </div>
+                <div class="gallery-item">
+                    <img src="assets/images/gallery-image02.jpg" alt="Gallery image 2">
+                </div>
+                <div class="gallery-item">
+                    <img src="assets/images/gallery-image03.jpg" alt="Gallery image 3">
+                </div>
+                <div class="gallery-item">
+                    <h3>Why do we love cats?</h3>
+                    <p>Adipiscing bibendum est ultricies integer quis auctor elit. Eget nunc scelerisque viverra mauris in. Volutpat est velit egestas dui id. Viverra suspendisse potenti nullam ac tortor vitae purus faucibus ornare. Nulla pharetra diam sit amet nisl. Lorem ipsum dolor sit amet consectetur adipiscing elit. Tempus quam pellentesque nec nam aliquam sem et. Nunc</p>
+                    <button class="btn">readmore</button>
+                </div>
+            </div>
+        </div>
+    </section>
+</main>
+<footer>
+
+</footer>
 </body>
 </html>
