--- a/index.html
+++ b/index.html
@@ -20,10 +20,13 @@
                 <a href="">Home</a>
             </li>
             <li class="nav-link">
-                <a href="">Home</a>
+                <a href="">Club</a>
             </li>
             <li class="nav-link">
-                <a href="">Home</a>
+                <a href="">Blog</a>
+            </li>
+            <li class="nav-link">
+                <a href="">Gallery</a>
             </li>
         </ul>
     </nav>
@@ -91,9 +94,7 @@
         </div>
     </section>
     <section>
-        <div class="white-section">
-
-        </div>
+        <div class="white-section"></div>
         <div class="gallery-section">
             <div class="gallery-items">
                 <div class="gallery-item">
@@ -107,9 +108,89 @@
                 </div>
                 <div class="gallery-item">
                     <h3>Why do we love cats?</h3>
-                    <p>Adipiscing bibendum est ultricies integer quis auctor elit. Eget nunc scelerisque viverra mauris in. Volutpat est velit egestas dui id. Viverra suspendisse potenti nullam ac tortor vitae purus faucibus ornare. Nulla pharetra diam sit amet nisl. Lorem ipsum dolor sit amet consectetur adipiscing elit. Tempus quam pellentesque nec nam aliquam sem et. Nunc</p>
-                    <button class="btn">readmore</button>
+                    <p>Adipiscing bibendum est ultricies integer quis auctor elit. Eget nunc scelerisque viverra mauris
+                        in. Volutpat est velit egestas dui id. Viverra suspendisse potenti nullam ac tortor vitae purus
+                        faucibus ornare. Nulla pharetra diam sit amet nisl. Lorem ipsum dolor sit amet consectetur
+                        adipiscing elit. Tempus quam pellentesque nec nam aliquam sem et. Nunc</p>
+                    <button class="btn">read more</button>
                 </div>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="subscribe-section">
+            <img src="assets/images/subscribe_cat.jpg" alt="Subscribe here">
+            <h2>Get the greatest stories<br>right in your mailbox</h2>
+            <div class="subscribe-form">
+                <form>
+                    <label>
+                        <input type="email" placeholder="Enter a valid email address">
+                    </label>
+                    <input type="button" value="submit">
+                </form>
+            </div>
+            <p>And don’t worry, we hate spam too! You can unsubcribe at anytime.</p>
+        </div>
+    </section>
+    <section>
+        <div class="cat-tips-container">
+            <div class="cat-tips-img">
+                <img src="assets/images/cat-tips.jpg" alt="cat-tips">
+            </div>
+            <div class="cat-tips">
+                <div class="cat-tip">
+                    <h2>Pet Guide</h2>
+                    <p>Sample text. Click to select the text box. Click again or double click to start editing the
+                        text.</p>
+                    <a class="more-link" href="">more</a>
+                </div>
+                <div class="cat-tip">
+                    <h2>Top Tips</h2>
+                    <p>Sample text. Click to select the text box. Click again or double click to start editing the
+                        text.</p>
+                    <a class="more-link" href="">more</a>
+                </div>
+                <div class="cat-tip">
+                    <h2>Best Toys</h2>
+                    <p>Sample text. Click to select the text box. Click again or double click to start editing the
+                        text.</p>
+                    <a class="more-link" href="">more</a>
+                </div>
+                <div class="cat-tip">
+                    <h2>Cat Products</h2>
+                    <p>Sample text. Click to select the text box. Click again or double click to start editing the
+                        text.</p>
+                    <a class="more-link" href="">more</a>
+                </div>
+                <div class="cat-tip">
+                    <h2>Cat Lovers</h2>
+                    <p>Sample text. Click to select the text box. Click again or double click to start editing the
+                        text.</p>
+                    <a class="more-link" href="">more</a>
+                </div>
+                <div class="cat-tip">
+                    <h2>Gifts for Cats</h2>
+                    <p>Sample text. Click to select the text box. Click again or double click to start editing the
+                        text.</p>
+                    <a class="more-link" href="">more</a>
+                </div>
+            </div>
+        </div>
+        <div class="white-section"></div>
+    </section>
+    <section>
+        <div class="keep-pet-happy-container">
+            <div class="left-side">
+                <h2>Keeping Pets Happy</h2>
+                <p>Cras adipiscing enim eu turpis egestas pretium aenean pharetra magna. Tempus urna et pharetra
+                    pharetra massa massa ultricies mi quis. Ut faucibus pulvinar elementum enim neque volutpat. Augue
+                    mauris augue neque gravida in. Venenatis cras sed felis eget velit aliquet sagittis. Morbi leo urna
+                    molestie at.</p>
+                <button class="btn">read more</button>
+            </div>
+            <div class="right-side">
+                <img src="assets/images/keep_.cat_happyjpg.jpg" alt="Keeping Pets Happy">
+                <div class="brown-shape"></div>
             </div>
         </div>
     </section>
