--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="Care about cat">
-    <meta name="keywords" content="cats, cats, cats">
+    <meta name="keywords" content="cats, blog, pet">
     <meta name="author" content="Michal Kmiť">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cat Stories</title>
     <link rel="stylesheet" href="assets/styles/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 <header>
@@ -27,6 +28,12 @@
             </li>
             <li class="nav-link">
                 <a href="">Gallery</a>
+            </li>
+            <li class="nav-link">
+                <a href="">Advices</a>
+            </li>
+            <li class="nav-link">
+                <a href="">Contact</a>
             </li>
         </ul>
     </nav>
@@ -49,34 +56,35 @@
                 <article class="cat-service-item">
                     <img src="assets/images/cat_cafe.jpg" alt="Cat Cafe">
                     <h3>Cat Cafe</h3>
-                    <p>Etiam erat velit scelerisque in dictum non consectetur. Nisl purus in mollis nunc sed id semper.
-                        Cras fermentum odio eu feugiat pretium nibh ipsum. Tristique senectus.</p>
+                    <p>Experience the cozy atmosphere of a cat cafe where you can enjoy a cup of coffee while spending
+                        time with adorable cats. Perfect for cat lovers seeking a relaxing and fun environment.</p>
                     <a class="more-link" href="">more</a>
                 </article>
                 <article class="cat-service-item">
                     <img src="assets/images/cat_care.jpg" alt="Cat Care">
                     <h3>Cat Care</h3>
-                    <p>Etiam erat velit scelerisque in dictum non consectetur. Nisl purus in mollis nunc sed id semper.
-                        Cras fermentum odio eu feugiat pretium nibh ipsum. Tristique senectus.</p>
+                    <p>Our cat care services provide professional grooming, health check-ups, and advice to ensure your
+                        feline friend stays happy and healthy. Trust our experts to take care of your beloved pet.</p>
                     <a class="more-link" href="">more</a>
                 </article>
                 <article class="cat-service-item">
                     <img src="assets/images/pet_guide.jpg" alt="Pet Guide">
                     <h3>Pet Guide</h3>
-                    <p>Etiam erat velit scelerisque in dictum non consectetur. Nisl purus in mollis nunc sed id semper.
-                        Cras fermentum odio eu feugiat pretium nibh ipsum. Tristique senectus.</p>
+                    <p>Discover valuable tips and information about pet care, training, and behavior. Whether you're a
+                        first-time pet owner or an experienced one, our guide will help you provide the best life for
+                        your furry friends.</p>
                     <a class="more-link" href="">more</a>
                 </article>
             </div>
         </div>
-        <div class="bright-section">
-            <div class="casual-cat-image">
-                <img src="assets/images/casual_cat.jpg" alt="Casual cat">
-            </div>
+
+        <div class="bright-section"></div>
+        <div class="casual-cat-image">
+            <img src="assets/images/casual_cat.jpg" alt="Casual cat">
             <div class="cat-blog-container">
                 <div class="cat-blog">
                     <h4>Cat blog</h4>
-                    <h2>Thinking of getting a <br>cat?</h2>
+                    <h2>Thinking of<br> getting a <br>cat?</h2>
                 </div>
                 <div class="cat-care">
                     <h2>Cat Care for Beginners</h2>
@@ -108,10 +116,10 @@
                 </div>
                 <div class="gallery-item">
                     <h3>Why do we love cats?</h3>
-                    <p>Adipiscing bibendum est ultricies integer quis auctor elit. Eget nunc scelerisque viverra mauris
-                        in. Volutpat est velit egestas dui id. Viverra suspendisse potenti nullam ac tortor vitae purus
-                        faucibus ornare. Nulla pharetra diam sit amet nisl. Lorem ipsum dolor sit amet consectetur
-                        adipiscing elit. Tempus quam pellentesque nec nam aliquam sem et. Nunc</p>
+                    <p>Cats have been companions to humans for thousands of years, offering comfort, companionship, and
+                        amusement. Their playful nature, soothing purring, and independent spirit make them unique and
+                        lovable pets. Discover what makes these furry friends so special and why they hold such a
+                        prominent place in our hearts.</p>
                     <button class="btn">read more</button>
                 </div>
             </div>
@@ -140,52 +148,57 @@
             <div class="cat-tips">
                 <div class="cat-tip">
                     <h2>Pet Guide</h2>
-                    <p>Sample text. Click to select the text box. Click again or double click to start editing the
-                        text.</p>
+                    <p>Learn everything you need to know about caring for your cat, from feeding and grooming to health
+                        and wellness. Our comprehensive guide will help you become a better pet owner and ensure your
+                        cat's happiness and well-being.</p>
                     <a class="more-link" href="">more</a>
                 </div>
                 <div class="cat-tip">
                     <h2>Top Tips</h2>
-                    <p>Sample text. Click to select the text box. Click again or double click to start editing the
-                        text.</p>
+                    <p>Discover expert advice on how to create a happy and healthy environment for your cat. From
+                        training tips to advice on managing behavior, these top tips will help strengthen your bond with
+                        your feline friend.</p>
                     <a class="more-link" href="">more</a>
                 </div>
                 <div class="cat-tip">
                     <h2>Best Toys</h2>
-                    <p>Sample text. Click to select the text box. Click again or double click to start editing the
-                        text.</p>
+                    <p>Find out which toys your cat will love the most! From interactive toys that stimulate their mind
+                        to plush ones for comfort, we’ve got the best recommendations for keeping your cat entertained
+                        and active.</p>
                     <a class="more-link" href="">more</a>
                 </div>
                 <div class="cat-tip">
                     <h2>Cat Products</h2>
-                    <p>Sample text. Click to select the text box. Click again or double click to start editing the
-                        text.</p>
+                    <p>Explore a selection of high-quality products for your cat. Whether you need grooming tools, cozy
+                        beds, or stylish accessories, we have everything to make your cat feel comfortable and
+                        pampered.</p>
                     <a class="more-link" href="">more</a>
                 </div>
                 <div class="cat-tip">
                     <h2>Cat Lovers</h2>
-                    <p>Sample text. Click to select the text box. Click again or double click to start editing the
-                        text.</p>
+                    <p>Join a community of cat lovers! Share stories, tips, and experiences with other cat enthusiasts.
+                        Whether you’re a new cat parent or a seasoned pro, there’s always something to learn and
+                        enjoy.</p>
                     <a class="more-link" href="">more</a>
                 </div>
                 <div class="cat-tip">
                     <h2>Gifts for Cats</h2>
-                    <p>Sample text. Click to select the text box. Click again or double click to start editing the
-                        text.</p>
+                    <p>Looking for the perfect gift for your cat? From treats to toys and accessories, we have a range
+                        of thoughtful gift ideas to delight your furry friend on any occasion.</p>
                     <a class="more-link" href="">more</a>
                 </div>
             </div>
         </div>
-        <div class="white-section"></div>
+        <div class="dark-brown-margin"></div>
     </section>
     <section>
         <div class="keep-pet-happy-container">
             <div class="left-side">
                 <h2>Keeping Pets Happy</h2>
-                <p>Cras adipiscing enim eu turpis egestas pretium aenean pharetra magna. Tempus urna et pharetra
-                    pharetra massa massa ultricies mi quis. Ut faucibus pulvinar elementum enim neque volutpat. Augue
-                    mauris augue neque gravida in. Venenatis cras sed felis eget velit aliquet sagittis. Morbi leo urna
-                    molestie at.</p>
+                <p>Keeping your pets happy and healthy is essential for their well-being. Whether it’s providing them
+                    with proper nutrition, engaging them in playful activities, or ensuring they get plenty of rest,
+                    there are many ways to ensure they live a fulfilling life. Creating a loving and safe environment
+                    for your pet helps them thrive and strengthens your bond with them.</p>
                 <button class="btn">read more</button>
             </div>
             <div class="right-side">
@@ -194,9 +207,59 @@
             </div>
         </div>
     </section>
+    <section>
+        <div class="need-help-section">
+            <div class="need-help-container">
+                <div class="left-side">
+                    <div class="text">
+                        <h2>Need Help?</h2>
+                        <p>
+                            If you need assistance or have any questions, don't hesitate to reach out. We're here to help and ensure you have the best experience with your pets. Whether it's advice, guidance, or support, we are just a message away.
+                        </p>
+                    </div>
+                    <div class="social-icons">
+                        <a href="https://www.facebook.com">
+                            <i class="fa fa-facebook"> </i>
+                        </a>
+                        <a href="https://www.twitter.com">
+                            <i class="fa fa-twitter"></i>
+                        </a>
+                        <a href="https://www.instagram.com">
+                            <i class="fa fa-instagram"></i>
+                        </a>
+                        <a href="https://www.google.com">
+                            <i class="fa fa-google-plus"></i>
+                        </a>
+                    </div>
+                </div>
+                <div class="right-side">
+                    <form class="custom-form">
+                        <div class="form-group">
+                            <label for="name">Name</label>
+                            <input type="text" id="name" placeholder="Enter your Name" maxlength="40" required>
+                        </div>
+                        <div class="form-row">
+                            <div class="form-group">
+                                <label for="phone">Phone</label>
+                                <input type="text" id="phone" placeholder="Enter your phone (e.g. +141)" maxlength="13"
+                                       required>
+                            </div>
+                            <div class="form-group">
+                                <label for="email">Email</label>
+                                <input type="email" id="email" placeholder="Enter a valid email address" maxlength="255"
+                                       required>
+                            </div>
+                        </div>
+                        <button type="button" class="submit-btn">submit</button>
+                    </form>
+                </div>
+            </div>
+            <div class="brown-space"></div>
+        </div>
+    </section>
 </main>
 <footer>
-
+    <div class="main-footer"></div>
 </footer>
 </body>
 </html>
