major bugs fixed

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                 <button class="btn">read more</button>
             </div>
             <div class="right-side">
-                <img src="assets/images/keep_.cat_happyjpg.jpg" alt="Keeping Pets Happy">
+                <img src="assets/images/keep_.cat_happy.jpg" alt="Keeping Pets Happy">
                 <div class="brown-shape"></div>
             </div>
         </div>
@@ -259,7 +259,12 @@
     </section>
 </main>
 <footer>
-    <div class="main-footer"></div>
+    <div class="main-footer">
+        <p>Michal Kmiť - 2025</p>
+        <p>
+            <a href="https://nicepage.com/t/3444245/cat-stories-tips-and-tricks-template" target="_blank">nicepage</a>
+        </p>
+    </div>
 </footer>
 </body>
 </html>
